--- a/admin.html
+++ b/admin.html
@@ -6,18 +6,20 @@
     <title>Admin</title>
 </head>
 <body>
-    
 
+    <h1>Admin</h1>
+    
+<form action="" id="admin-form">
 
 <label for="">Email</label><br>
-<input type="text" id="adminname"><br>
+<input type="text" id="admin-email"><br>
 
 <label for="">Password</label><br>
-<input type="password"><br><br>
+<input type="password" id="admin-password"><br><br>
 
-<button>Login</button>
+<button type="submit">Login</button>
 
-
+</form>
     <script src="./java.js"> </script>
 </body>
 </html>
