--- a/dashboard.html
+++ b/dashboard.html
@@ -6,8 +6,8 @@
     <title>Dashboard</title>
 </head>
 <body>
-
-    <table border="1"; width="80%">
+<h1>DashBoard Page</h1>
+    <table border="1"; width="80%" id="show">
         <thead>
             <tr>
                 <th>Name</th>
@@ -16,6 +16,7 @@
                 <th>Action</th>
             </tr>
         </thead>
+        <tbody id="show"></tbody>
     </table>
     
 
