--- a/admin.html
+++ b/admin.html
@@ -4,6 +4,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin</title>
+    <style>
+    body {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background-color: #f0f4f8;
+        margin: 10px;
+        padding: 10px;
+    }
+
+    h1 {
+        text-align: center;
+        color: #333;
+        margin-top: 40px;
+        margin-bottom: 20px;
+        margin-right: 600px;
+    
+    }
+
+    /* .admin-container {
+        background-color: #ffffff;
+        padding: 35px 40px;
+        border-radius: 10px;
+        box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
+        width: 100%;
+        max-width: 400px;
+        margin: 0 auto; /* center horizontally */
+    } */
+
+    label {
+        display: block;
+        margin-top: 15px;
+        font-weight: bold;
+        color: #444;
+    }
+
+    input[type="text"],
+    input[type="password"] {
+        width: 50%;
+        padding: 10px;
+        margin-top: 5px;
+        border: 1px solid #ccc;
+        border-radius: 6px;
+        font-size: 14px;
+    }
+
+    button {
+        margin-top: 25px;
+        width: 50%;
+        padding: 12px;
+        background-color: #28a745;
+        color: white;
+        border: none;
+        border-radius: 6px;
+        font-size: 16px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+
+    button:hover {
+        background-color: #218838;
+    }
+</style>
+
+
 </head>
 <body>
 
